# HiMe

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.watch  LICENSE  PRIVACY.md  README.md  README.zh.md  SECURITY.md  docker-compose.yml  hime.sh  pyproject.toml  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: config.py  logging_config.py  main.py  requirements.txt  utils.py
backend/agent/: __init__.py  agent_loops.py  agent_prompts.py  agent_tools.py  autonomous_agent.py  cancellation.py  context_manager.py  data_store.py  errors.py  fact_verifier.py  llm_providers.py  memory_manager.py  persistence.py  prompt_loader.py  retention.py  trigger_evaluator.py
backend/agent/llm/: __init__.py  anthropic_provider.py  bedrock.py  fallback.py  gemini.py  openai_provider.py  zhipuai_provider.py
backend/agent/skills/: __init__.py  loader.py  prompt.py  registry.py
backend/agent/tools/: __init__.py  base.py  code_tool.py  create_page_tool.py  finish_chat_tool.py  page_helpers.py  push_report_tool.py  query_cache.py  read_skill_tool.py  registry.py  reply_user_tool.py  result_manager.py  sql_tool.py  tools.json  update_md_tool.py
backend/api/: __init__.py  agent_diagnostics.py  agent_lifecycle.py  agent_routes.py  agent_state.py  agent_tasks.py  config_routes.py  data_routes.py  page_routes.py  prompt_routes.py  skill_routes.py  stream_routes.py
backend/data_readers/: __init__.py  apple_health_features.py  base_reader.py  data_store_reader.py  watch_db_reader.py
backend/feishu/: __init__.py  cards.py  gateway.py  models.py  sender.py  transport.py
backend/i18n/: __init__.py
backend/i18n/locales/: en.json  zh.json
backend/messaging/: __init__.py  base.py  command_parser.py  inbox.py  registry.py
backend/services/: connection_manager.py  streaming_service.py
backend/telegram/: __init__.py  command_parser.py  gateway.py  messages.json  models.py  poller.py  sender.py
backend/telegram/handlers/: __init__.py  command_handler.py
backend/weixin/: __init__.py  gateway.py  models.py  qr_login.py  sender.py  transport.py
data/personalised_pages/_shared/: hime-ui.css  hime-ui.js
docker/: entrypoint-backend.sh  nginx.conf
docs/: DEPLOYMENT.md  DEVELOPMENT.md  INSTALL.md
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css
frontend/src/__tests__/: App.test.jsx  AppContext.test.jsx  Dashboard.test.jsx  KnowledgeBase.test.jsx  ReportsView.test.jsx
frontend/src/components/: ErrorBoundary.jsx  LanguageSwitcher.jsx  StatisticsPanel.jsx
frontend/src/context/: AppContext.jsx
frontend/src/i18n/: index.js
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/lib/: api.js  utils.js
frontend/src/pages/: AutonomousAgentMonitor.jsx  Dashboard.jsx  KnowledgeBase.jsx  PersonalisedPages.jsx  PromptEditor.jsx  ReportsView.jsx  Skills.jsx
frontend/src/test/: setup.js
frontend/src/test/mocks/: api.js
ios/Server/: data_api.py  requirements.txt  server.py
ios/hime/: Config.xcconfig.template  HimeWatchWidgetsExtension.entitlements  HimeWidgetsExtension.entitlements
ios/hime/HimeWatchWidgets/: HimeWatchWidgets.swift  HimeWatchWidgetsBundle.swift  HimeWatchWidgetsControl.swift
ios/hime/HimeWidgets/: HimeWidgets.swift  HimeWidgetsBundle.swift  HimeWidgetsControl.swift  HimeWidgetsLiveActivity.swift
ios/hime/hime/: APIClient.swift  CatAnimationEngine.swift  CatHeadView.swift  CatPixelArt.swift  CatView.swift  CatViewModel.swift  ContentView.swift  DashboardView.swift  DashboardViewModel.swift  DataListView.swift  GitHubIcon.swift  HealthKitManager.swift  HealthPayload.swift  Info.plist  Localizable.xcstrings  LogManager.swift  OnboardingView.swift  PendingStore.swift  PhoneConnectivityManager.swift  ReportsView.swift  ServerConfig.swift  SettingsView.swift  TasksView.swift  WebSocketClient.swift  hime.entitlements  himeApp.swift
ios/hime/hime.xcodeproj/: project.pbxproj
ios/hime/hime.xcodeproj/xcshareddata/xcschemes/: hime.xcscheme
ios/hime/hime/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/hime/hime/Assets.xcassets/AppLogo.imageset/: Contents.json
ios/hime/himewatch/: ContentView.swift  Localizable.xcstrings  WatchCatHead.swift  WatchConnectivityManager.swift  WatchHealthManager.swift  himeWatch.entitlements  himeWatchApp.swift
prompts/: conversation_header.md  create_page_guide.md  data_schema.md  experience.md  memory_guide.md  quick_goal.md  rules_chat.md  soul.md  sub_analysis.md  sub_manage.md  user.md  verify_chat.md  verify_health.md  verify_operation.md
skills/: baseline_change_point.md  circadian_alignment.md  respiratory_screen.md  sedentary_behavior_audit.md  sleep_regularity_index.md
tests/: conftest.py  test_agent_infrastructure.py  test_agent_tools.py  test_api_routes.py  test_bug_fixes.py  test_data_pipeline.py  test_deepseek_provider.py  test_feishu_gateway.py  test_inbox_queue.py  test_read_skill_tool.py  test_retention.py  test_skill_loader.py  test_streaming_service.py  test_tool_enhancements.py  test_utils.py
