[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hime"
version = "1.0.0"
description = "Health Intelligence Management Engine — autonomous LLM agent platform for wearable health data analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{name = "Hime Organisation"}]
keywords = ["health", "agent", "llm", "wearable", "apple-watch", "healthkit", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "websockets>=13.0,<14",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "pyyaml>=6.0,<7",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "pyarrow==14.0.2",
    "httpx==0.28.1",
    "croniter>=1.3",
    "openai==1.10.0",
    "anthropic==0.18.0",
    "google-genai==0.2.2",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "ipython>=8.0,<9",
]

[project.optional-dependencies]
feishu = ["lark-oapi>=1.4.0"]
bedrock = ["boto3>=1.34"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/thinkwee/Hime"
Repository = "https://github.com/thinkwee/Hime"
Issues = "https://github.com/thinkwee/Hime/issues"
Documentation = "https://github.com/thinkwee/Hime"

[project.scripts]
hime = "backend.main:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend" = ["telegram/messages.json", "agent/tools/tools.json", "i18n/locales/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "data",
    "memory",
    "logs",
    "frontend",
    "ios",
    "GLOBEM",
    "APPLE",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
    "B904",  # raise without `from` inside except (used pervasively)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests
"backend/agent/tools/page_helpers.py" = ["F821"]  # references injected globals (HEALTH_DB_PATH, MEMORY_DB_PATH)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
